# copy-hexlet-python-project

./: proj1step6.py
python-project-49/: pyproject.toml
