[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["teglev <teglev.sky@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
